[gd_scene load_steps=21 format=3 uid="uid://dcpcxfh7umytq"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_gc6j6"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="2_o6xnf"]
[ext_resource type="FontFile" uid="uid://dohkbu7ekkfx8" path="res://Textures/Fonts/pixeltype/Pixeltype.ttf" id="3_3ni5k"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/MiniDiagram/mini_diagram_viewer.gd" id="4_o6nlg"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="6_r8qrn"]
[ext_resource type="PackedScene" uid="uid://cktgoqxrvgsh0" path="res://Scenes and Scripts/UI/MiniDiagram/mini_diagram.tscn" id="6_y8o7g"]
[ext_resource type="Texture2D" uid="uid://bm3ag65nskhpk" path="res://Textures/UI/MiniDiagram/arrow_left.png" id="8_g4oap"]
[ext_resource type="Texture2D" uid="uid://cb6lapmtgwimd" path="res://Textures/UI/MiniDiagram/arrow_right.png" id="9_4bpdd"]
[ext_resource type="Texture2D" uid="uid://bvdr8f7dmjpmi" path="res://Textures/Buttons/icons/upload.png" id="9_ulpnp"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="10_6viqt"]
[ext_resource type="Texture2D" uid="uid://cms1u4elh5bo3" path="res://Textures/Buttons/icons/delete.png" id="11_5ck4b"]
[ext_resource type="Texture2D" uid="uid://dd8aycuymlcjg" path="res://Textures/Buttons/icons/resave.png" id="11_tsyye"]
[ext_resource type="StyleBox" uid="uid://bubm5sx3xn6q5" path="res://Resources/Themes/TitleLabel.tres" id="13_5bwpc"]
[ext_resource type="Texture2D" uid="uid://ci1qrp3pyqm6h" path="res://Textures/Buttons/icons/close.png" id="14_e44q0"]
[ext_resource type="Texture2D" uid="uid://cgfs1pdopjbh" path="res://Textures/Buttons/icons/close_hover.png" id="15_orka2"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes and Scripts/Components/button_sound_component.tscn" id="16_bvagq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pkocb"]
texture = ExtResource("2_o6xnf")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="FontVariation" id="FontVariation_eel88"]
base_font = ExtResource("3_3ni5k")
spacing_top = 2
spacing_bottom = -2

[sub_resource type="Theme" id="Theme_x8r6v"]
default_font = SubResource("FontVariation_eel88")
default_font_size = 16
PanelContainer/styles/panel = SubResource("StyleBoxTexture_pkocb")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05qsh"]

[node name="MiniDiagramViewer" type="Control" node_paths=PackedStringArray("GrabAreas")]
material = ExtResource("1_gc6j6")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x8r6v")
script = ExtResource("4_o6nlg")
GrabAreas = [NodePath("VBoxContainer/PanelContainer"), NodePath("VBoxContainer/TitleContainer")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -66.0
offset_right = 122.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -192

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "No diagrams to show :("

[node name="MiniDiagramContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer"]
material = ExtResource("1_gc6j6")
use_parent_material = true
custom_minimum_size = Vector2(230, 128)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_05qsh")

[node name="MiniDiagram" parent="VBoxContainer/PanelContainer/VBoxContainer/CenterContainer/MiniDiagramContainer" instance=ExtResource("6_y8o7g")]
use_parent_material = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Left" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(18, 2.08165e-12)
icon = ExtResource("8_g4oap")
icon_use_parent_material = true

[node name="Load" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(25, 25)
icon = ExtResource("9_ulpnp")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Load" instance=ExtResource("10_6viqt")]
tooltip = "Load Diagram"

[node name="Resave" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
visible = false
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(24, 25)
icon = ExtResource("11_tsyye")
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Resave" instance=ExtResource("10_6viqt")]
tooltip = "Resave diagram"

[node name="Delete" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(24, 25)
icon = ExtResource("11_5ck4b")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Delete" instance=ExtResource("10_6viqt")]
tooltip = "Delete Diagram"

[node name="Right" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(18, 2.08165e-12)
icon = ExtResource("9_4bpdd")
icon_use_parent_material = true

[node name="IndexContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="IndexLabel" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/IndexContainer"]
use_parent_material = true
layout_mode = 2
text = "1/10"
vertical_alignment = 1

[node name="TitleContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("13_5bwpc")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Close" type="TextureButton" parent="VBoxContainer/TitleContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(10, 14)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("14_e44q0")
texture_hover = ExtResource("15_orka2")
stretch_mode = 5

[node name="ButtonSoundComponent" parent="VBoxContainer/TitleContainer/HBoxContainer/Close" instance=ExtResource("16_bvagq")]
on_pressed = true

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Resave" to="." method="_on_resave_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="VBoxContainer/TitleContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
